--- a/index.html
+++ b/index.html
@@ -145,6 +145,6 @@
 
     </footer>
     <!--JS-->
-    <script src="assets/js/main.js" type="text/javascript"></script>
+    <script src="/teatar_na_brdu/assets/js/main.js"></script>
 </body>
 </html>
